# krokett_editor

./: .gitignore  Cargo.toml  README.md  index.html  krokett_editor_web-3e69d90471f30de3.js  krokett_editor_web-93faaa392d5a4963.js  krokett_editor_web-9f318a87820361ef.js  tracks.gpx
.github/workflows/: pages.yml  rust.yml
krokett_editor/: Cargo.toml
krokett_editor/src/: android_intent_io.rs  constants.rs  elevation_service.rs  file_utils.rs  geolocation.rs  gpx.rs  lib.rs  places.rs  position_indicator.rs  style.rs  task_utils.rs  tiles.rs  toggle_switch.rs  windows.rs
krokett_editor/src/gpx/: altitude_profile.rs  editing.rs  editors.rs  import_io.rs  plugins.rs  polyline.rs  segment_draw.rs  segments.rs  tracks.rs  tree.rs  waypoint_markers.rs  waypoints.rs
krokett_editor_android/: Makefile
krokett_editor_android/java/app/: build.gradle
krokett_editor_android/java/app/src/main/: AndroidManifest.xml
krokett_editor_android/java/app/src/main/java/com/github/khep/krokett_editor/: MainActivity.java
krokett_editor_android/java/app/src/main/java/com/github/podusowski/krokett_editor/: MainActivity.java
krokett_editor_android/rust/: Cargo.toml
krokett_editor_android/rust/src/: lib.rs
krokett_editor_native/: Cargo.toml
krokett_editor_native/src/: main.rs
krokett_editor_web/: Cargo.toml
krokett_editor_web/src/: main.rs
