[package]
name = "krokett_editor"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
walkers.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
log.workspace = true
egui_material_icons = "0.5.0"
egui_ltreeview = "0.6.1"
itertools = "0.14.0"
gpx = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.17.2"
