[package]
name = "krokett_editor"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
walkers.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
log.workspace = true
egui_material_icons = "0.5.0"
egui_ltreeview = "0.6.1"
egui-notify = "0.21.0"
itertools = "0.14.0"
gpx = "0.10"
rfd = "0.17.2"
anyhow = "1.0.102"
futures = "0.3.32"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.64"
