[package]
name = "krokett_editor"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
walkers.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
egui_plot = "0.34.1"
log.workspace = true
egui_material_icons = "0.5.0"
egui_ltreeview = "0.6.1"
egui-notify = "0.21.0"
itertools = "0.14.0"
gpx = "0.10"
anyhow = "1.0.102"
futures = "0.3.32"
time = { version = "0.3.47", features = ["std", "wasm-bindgen"] }
geo-types = "0.7.17"
ehttp = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.64"
wasm-bindgen = "0.2"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = ["Window", "Navigator", "Geolocation", "Position", "Coordinates", "PositionError"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.17.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "=0.21.1"
ndk-context = "0.1.1"
