[package]
name = "krokett_editor_native"
version.workspace = true
edition.workspace = true
publish = false
default-run = "krokett_editor_native"

[dependencies]
krokett_editor = { path = "../krokett_editor" }
eframe.workspace = true
egui.workspace = true
env_logger = "0.11"

[package.metadata.appimage]
assets = ["images"]
icon = "assets/icon.png"
auto_link = true